* added converter - as they are already needed * some bugfixes - obvious bugs * more demo stuff

--- a/src/gallery-pauls-binding/tests/testpage.html
+++ b/src/gallery-pauls-binding/tests/testpage.html
@@ -15,9 +15,9 @@
         <hr />
         <i>Second Inputs bind to the same path - simply as show case</i>
         <div id="form2">
-            <input bind="person.name">
-            <input bind="person.lastName">
-            <select bind="person.sex">
+            <input bind="person.name"> --> In span <span bind="person.name"></span>
+            <input bind="person.lastName"> --> In span <span bind="person.lastName"></span>
+            <select bind="person.sex"> --> In span <span bind="person.sex"></span>
                 <option value="true">Male</option>
                 <option value="false">Female</option>
             </select>
